@@ -3,19 +3,13 @@ package com.me.tft_02.dynamictextures.util;
 import java.util.Arrays;
 
 import org.bukkit.Location;
-import org.bukkit.craftbukkit.v1_7_R1.entity.CraftPlayer;
 import org.bukkit.entity.Player;
-import org.bukkit.plugin.messaging.Messenger;
 
 import com.me.tft_02.dynamictextures.DynamicTextures;
 
-import com.google.common.base.Charsets;
-import net.minecraft.server.v1_7_R1.PacketPlayOutCustomPayload;
-import org.apache.commons.lang.Validate;
-
 public class Misc {
 
-    public static void loadTexturePack(Player player) {
+    public static void loadResourcePack(Player player) {
         if (!player.hasPermission("dynamictextures.resourcepack")) {
             return;
         }
@@ -47,26 +41,7 @@ public class Misc {
         }
 
         if ((url != null) && (url.contains("http://") || url.contains("https://")) && url.contains(".zip")) {
-            setTexturePack(player, url);
-        }
-    }
-
-    public static void setTexturePack(Player player, String url) {
-        if (DynamicTextures.p.getConfig().getBoolean("General.Use_Packets")) {
-            try {
-                Validate.notNull(url, "Resource pack URL cannot be null");
-
-                byte[] message = url.getBytes(Charsets.UTF_8);
-                Validate.isTrue(message.length <= Messenger.MAX_MESSAGE_SIZE, "Resource pack URL is too long");
-
-                ((CraftPlayer) player).getHandle().playerConnection.sendPacket(new PacketPlayOutCustomPayload("MC|RPack", message));
-            }
-            catch (Exception e) {
-                DynamicTextures.p.getLogger().warning("Sending packets failed, plugin probably outdated!");
-            }
-        }
-        else {
-            player.setTexturePack(url);
+            player.setResourcePack(url);
         }
     }
 }
