@@ -7,6 +7,8 @@ Key:
   - Removal
 
 Version 1.3.1 | Tested on CB 1.7.2-R0.1
+ + Updated for CraftBukkit 1.7.2-R0.1 beta, now uses proper Bukkit API to set ResourcePacks
+ - Removed 'Use_Packets' option
 
 Version 1.3.0 | Tested on CB 1.7.2-R0.1
  + Updated for Resource Packs using Packets (enable this option in config.yml)
